--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "dependencies": {
     "@slidev/cli": "^0.50.0-beta.2",
-    "@slidev/theme-apple-basic": "^0.25.1",
-    "@slidev/theme-bricks": "^0.25.0",
-    "@slidev/theme-default": "^0.25.0",
-    "@slidev/theme-seriph": "^0.25.0",
+    "@slidev/theme-default": "latest",
+    "@slidev/theme-seriph": "latest",
     "vue": "^3.5.10"
   }
 }
