--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "markdown.copyFiles.destination": {
-    "**/*": "${documentWorkspaceFolder}/public/images/${fileName}"
+    "**/*": "${documentWorkspaceFolder}/public/${fileName}"
   }
 }
