--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.50.0-beta.2",
+    "@slidev/cli": "^0.50.0-beta.7",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "vue": "^3.5.10"
+    "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "@iconify-json/logos": "^1.2.3",
+    "@iconify-json/mdi": "^1.2.1",
+    "unplugin-icons": "^0.20.1"
   }
 }
