--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "markdown.copyFiles.destination": {
     "**/*": "${documentWorkspaceFolder}/public/${fileName}"
-  }
+  },
+  "cSpell.language": "en,de-DE"
 }
