adds `slidev export`

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
-    "export": "slidev export"
+    "export": "slidev export",
+    "export-pdf": "npm run export",
+    "export-pptx": "slidev export --format pptx"
   },
   "dependencies": {
     "@slidev/cli": "0.50.0-beta.7",
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@iconify-json/logos": "^1.2.3",
     "@iconify-json/mdi": "^1.2.1",
+    "playwright-chromium": "^1.49.0",
     "unplugin-icons": "^0.20.1"
   }
 }
